<resources>
    <string name="app_name">SignSystem1</string>
    <string name="app_logo">App logo</string>
    <string name="this_app_is_created_by_wed">This app is created by Wed</string>
    <string name="github">Github</string>
    <string name="build_by_wed">Build by Wed </string>
    <string name="hello_there_n_welcome_back">Hello there,\n welcome back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="new_user_signup">New user ? signup</string>
    <string name="hello_there">Hello there,</string>
    <string name="sign_up_to_start_your_new_journey">Sign up to start your new journey</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_sign_in">Already have an account sign in</string>
</resources>